# anixart

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.py
anixart/: __init__.py  __version__.py  api.py  auth.py  endpoints.py  endpoints_map.py  enums.py  errors.py  exceptions.py  request_handler.py  utils.py
anixart/api/: api.py  api.pyi
anixart/auth/: __init__.py  account.py  endpoints.py  error_handler.py  erros.py  factories.py  handler.py  objects.py
anixart/profile/: __init__.py  endpoints.py  error_handler.py  factories.py  objects.py
docs/: CHANGELOG.md  LICENSE.md  index.md  readme.md
examples/: auth.py  readme.md
